[package]
name = "webapp_api"
version = "0.1.0"
authors = ["bashhack (Marc Laughton) <info@marclaughton.com>"]
edition = "2018"

[dependencies]
iron = "*"
router = "*"
logger = "*"
env_logger = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
